tools/sddl2/assembler/tests/success/math_mul_basic.asm
# Test: math.mul - multiplication
# Stack: ... I64 I64 → ... I64
push.i32 5
push.i32 7
math.mul
halt
