tools/sddl2/assembler/tests/fail/math_add_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 10
push.i32 20
math.add 5
halt
